recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: error: not found: value droit
  droit(90)
  ^FourSquare:7: error: not found: value droit
  droit(90)
  ^FourSquare:9: error: not found: value droit
  droit(90)
  ^