recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
  montre()
  avance(100)
  droit(90)
  avance(100)
  droit(90)
 	avance(100)
  droit(90)
  avance(100)
  
}